--- a/_posts/hadoop/20140-02-24-hadoop-pig.md
+++ b/_posts/hadoop/20140-02-24-hadoop-pig.md
@@ -96,10 +96,10 @@ filter：经常用于对数据进行筛选，语法如下：
 
 #####推荐阅读
 
-[http://www.codelast.com/?p=3621](http://www.codelast.com/?p=3621 "Apache Pig的一些基础概念及用法总结（1）")
+[Apache Pig的一些基础概念及用法总结（1）](http://www.codelast.com/?p=3621)
 
-[http://www.codelast.com/?p=4611](http://www.codelast.com/?p=4611 "Apache Pig的一些基础概念及用法总结（2）")
+[Apache Pig的一些基础概念及用法总结（2）](http://www.codelast.com/?p=4611)
 
-[http://www.codelast.com/?p=4249](http://www.codelast.com/?p=4249 "Apache Pig中文教程（进阶）")
+[Apache Pig中文教程（进阶）](http://www.codelast.com/?p=4249)
 
-[http://www.codelast.com/?p=4577](http://www.codelast.com/?p=4577 "使用Apache Pig时应该注意/避免的操作或事项")
+[使用Apache Pig时应该注意/避免的操作或事项](http://www.codelast.com/?p=4577)
